add command every cell

--- a/DataExtractionTJ.ipynb
+++ b/DataExtractionTJ.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This Is EDA for Transjakarta Trasportation 2021"
+    "This Is Data Extraction for Transjakarta Trasportation 2021"
    ]
   },
   {
@@ -13,6 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#importing libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -29,6 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#change directory\n",
     "os.chdir('D:\\Data Machinelearning\\Transjakarta\\CSVTJ')"
    ]
   },
@@ -38,6 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#list all files csv in directory\n",
     "csv_files = [f for f in os.listdir() if f.endswith('.csv')]"
    ]
   },
@@ -47,6 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#read all csv files\n",
     "dfs = []\n",
     "\n",
     "for csv in csv_files:\n",
@@ -60,6 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#concat all csv files\n",
     "final_df = pd.concat(dfs, ignore_index=True)"
    ]
   },
@@ -169,6 +174,7 @@
     }
    ],
    "source": [
+    "#checking data\n",
     "final_df.head()"
    ]
   },
@@ -198,6 +204,7 @@
     }
    ],
    "source": [
+    "#check info data\n",
     "final_df.info()"
    ]
   },
@@ -207,6 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#checking zero value\n",
     "filter_data = final_df[final_df.isin([0]).any(1)]"
    ]
   },
@@ -778,6 +786,7 @@
     }
    ],
    "source": [
+    "#print zero value\n",
     "filter_data"
    ]
   },
@@ -794,6 +803,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#change directory new folder\n",
     "os.chdir('D:\\Data Machinelearning\\Transjakarta\\CSVTJFinal')"
    ]
   },
@@ -803,6 +813,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#list all files csv in directory\n",
     "csv_files = [f for f in os.listdir() if f.endswith('.csv')]"
    ]
   },
@@ -812,6 +823,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#read all csv files\n",
     "dfsf = []\n",
     "\n",
     "for csv in csv_files:\n",
@@ -825,6 +837,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#concat all csv files\n",
     "final_df= pd.concat(dfsf, ignore_index=True)"
    ]
   },
@@ -834,6 +847,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#checking drop zero value\n",
     "clean_df = final_df.drop(final_df[final_df['jumlah_penumpang']==0].index)"
    ]
   },
@@ -843,6 +857,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#sorting data to bulan\n",
     "clean_df.sort_values(by=['bulan'], inplace=True,ignore_index=True)"
    ]
   },
@@ -872,6 +887,7 @@
     }
    ],
    "source": [
+    "#checking info data\n",
     "clean_df.info()"
    ]
   },
@@ -981,7 +997,18 @@
     }
    ],
    "source": [
+    "#checking info data\n",
     "clean_df.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#table to csv\n",
+    "clean_df.to_csv('DataTransjakarta.csv', index=False)"
    ]
   },
   {
@@ -990,6 +1017,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#spliting variable trayek with delimiter '-'\n",
     "splited_df = clean_df['trayek'].str.split(' - ', expand=True)"
    ]
   },
@@ -1107,15 +1135,17 @@
     }
    ],
    "source": [
+    "#checking the value\n",
     "splited_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#spliting variable trayek with delimiter 'via'\n",
     "splited_df2=splited_df[1].str.split(' via ', expand=True)"
    ]
   },
@@ -1141,6 +1171,7 @@
     }
    ],
    "source": [
+    "#checking data info\n",
     "splited_df2.info()"
    ]
   },
@@ -1150,6 +1181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#add the new variable to dataframe\n",
     "clean_df['tempat_awal']=splited_df[0]\n",
     "clean_df['tempat_akhir']=splited_df2[0]\n",
     "clean_df['via']=splited_df2[1] "
@@ -1184,6 +1216,7 @@
     }
    ],
    "source": [
+    "#checking data info\n",
     "clean_df.info()"
    ]
   },
@@ -1193,6 +1226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#from table to csv\n",
     "clean_df.to_csv('Transjakarta2.csv', index=False)"
    ]
   }
